force-app/main/default/objects/ffr__XXXTransaction__c/ffr__XXXTransaction__c.object-meta.xml
<CustomObject>
    <description>For internal use only.</description>
    <label>XXX Transaction</label>
    <nameField>
        <displayFormat>XTRN{000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XXX Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>