force-app/main/default/objects/ffr__XXXTransaction__c/fields/ffr__CreditNote__c.field-meta.xml
<CustomField>
    <fullName>ffr__CreditNote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note</label>
    <referenceTo>ffr__XXXCreditNote__c</referenceTo>
    <relationshipLabel>XXX Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>