force-app/main/default/objects/ffr__XXXTransaction__c/fields/ffr__DocumentDescription__c.field-meta.xml
<CustomField>
    <fullName>ffr__DocumentDescription__c</fullName>
    <label>Document Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>