force-app/main/default/objects/ffr__XXXTransaction__c/fields/ffr__EncryptField__c.field-meta.xml
<CustomField>
    <fullName>ffr__EncryptField__c</fullName>
    <label>Encrypt Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>