force-app/main/default/objects/ffr__XXXTransaction__c/fields/ffr__Invoice__c.field-meta.xml
<CustomField>
    <fullName>ffr__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>ffr__XXXInvoice__c</referenceTo>
    <relationshipLabel>XXX Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>