force-app/main/default/objects/ffr__XXXTransaction__c/fields/ffr__TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>ffr__TransactionDate__c</fullName>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>