force-app/main/default/objects/ffr__XXXTransaction__c/fields/ffr__TransactionDueDate__c.field-meta.xml
<CustomField>
    <fullName>ffr__TransactionDueDate__c</fullName>
    <label>Transaction Due Date</label>
    <type>Date</type>
</CustomField>